// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`options as array of strings renders checkbox group 1`] = `
<div>
  <div
    class="react-combo-boxes-checkbox"
  >
    <input
      class="react-combo-boxes-checkbox__input"
      id="id_option_apple"
      type="checkbox"
      value="Apple"
    />
    <label
      class="react-combo-boxes-checkbox__label"
      for="id_option_apple"
      id="id_option_apple_label"
    >
      Apple
    </label>
  </div>
  <div
    class="react-combo-boxes-checkbox"
  >
    <input
      class="react-combo-boxes-checkbox__input"
      id="id_option_banana"
      type="checkbox"
      value="Banana"
    />
    <label
      class="react-combo-boxes-checkbox__label"
      for="id_option_banana"
      id="id_option_banana_label"
    >
      Banana
    </label>
  </div>
  <div
    class="react-combo-boxes-checkbox"
  >
    <input
      class="react-combo-boxes-checkbox__input"
      id="id_option_orange"
      type="checkbox"
      value="Orange"
    />
    <label
      class="react-combo-boxes-checkbox__label"
      for="id_option_orange"
      id="id_option_orange_label"
    >
      Orange
    </label>
  </div>
</div>
`;

exports[`options options as array of objects group renders grouped options 1`] = `
<div>
  <div
    class="react-combo-boxes-checkbox"
  >
    <input
      class="react-combo-boxes-checkbox__input"
      id="id_option_apple"
      type="checkbox"
      value="Apple"
    />
    <label
      class="react-combo-boxes-checkbox__label"
      for="id_option_apple"
      id="id_option_apple_label"
    >
      Apple
    </label>
  </div>
  <div
    class="react-combo-boxes-checkbox-group"
  >
    <div
      class="react-combo-boxes-checkbox-group__label"
      id="id_group_citrus"
    >
      Citrus
    </div>
    <div
      class="react-combo-boxes-checkbox"
    >
      <input
        aria-labelledby="id_group_citrus id_option_orange_label"
        class="react-combo-boxes-checkbox__input"
        id="id_option_orange"
        type="checkbox"
        value="Orange"
      />
      <label
        class="react-combo-boxes-checkbox__label"
        for="id_option_orange"
        id="id_option_orange_label"
      >
        Orange
      </label>
    </div>
    <div
      class="react-combo-boxes-checkbox"
    >
      <input
        aria-labelledby="id_group_citrus id_option_lemon_label"
        class="react-combo-boxes-checkbox__input"
        id="id_option_lemon"
        type="checkbox"
        value="Lemon"
      />
      <label
        class="react-combo-boxes-checkbox__label"
        for="id_option_lemon"
        id="id_option_lemon_label"
      >
        Lemon
      </label>
    </div>
  </div>
  <div
    class="react-combo-boxes-checkbox-group"
  >
    <div
      class="react-combo-boxes-checkbox-group__label"
      id="id_group_berry"
    >
      Berry
    </div>
    <div
      class="react-combo-boxes-checkbox"
    >
      <input
        aria-labelledby="id_group_berry id_option_raspberry_label"
        class="react-combo-boxes-checkbox__input"
        id="id_option_raspberry"
        type="checkbox"
        value="Raspberry"
      />
      <label
        class="react-combo-boxes-checkbox__label"
        for="id_option_raspberry"
        id="id_option_raspberry_label"
      >
        Raspberry
      </label>
    </div>
    <div
      class="react-combo-boxes-checkbox"
    >
      <input
        aria-labelledby="id_group_berry id_option_strawberry_label"
        class="react-combo-boxes-checkbox__input"
        id="id_option_strawberry"
        type="checkbox"
        value="Strawberry"
      />
      <label
        class="react-combo-boxes-checkbox__label"
        for="id_option_strawberry"
        id="id_option_strawberry_label"
      >
        Strawberry
      </label>
    </div>
  </div>
</div>
`;
